citas-frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: citasweb
  name: citasweb
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: citasweb
  sessionAffinity: None
  type: ClusterIP
